--- a/kayako-helper/src/styles/toggleableStyles.scss
+++ b/kayako-helper/src/styles/toggleableStyles.scss
@@ -462,6 +462,7 @@ $noteBackgroundColor: hsl(203 76% 99% / 1);
 
 #{sel.$selectedTab} {
   padding: 0 4px;
+  margin-bottom: 3px;
 }
 
 #{sel.$activeTab} {
